--- a/algo-stuff/package.json
+++ b/algo-stuff/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@prisma/client": "4.16.2",
+    "date-fns": "^2.30.0",
+ 
     "express": "4.18.2"
   },
   "devDependencies": {
