can get gaps in schedule

--- a/algo-stuff/package.json
+++ b/algo-stuff/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
     "@prisma/client": "4.16.2",
