--- a/algo-stuff/package.json
+++ b/algo-stuff/package.json
@@ -3,23 +3,17 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "start" : "node oop/index.js"
   },
   "dependencies": {
-    "@prisma/client": "4.16.2",
     "date-fns": "^2.30.0",
- 
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "nodemon": "^3.0.1"
+
+   
   },
   "devDependencies": {
-    "@types/express": "4.17.17",
-    "@types/node": "18.16.19",
-    "nodemon": "^3.0.1",
-    "prisma": "4.16.2",
-    "ts-node": "^10.9.1",
-    "typescript": "5.1.6"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    
   }
 }
