--- a/algo-stuff/package.json
+++ b/algo-stuff/package.json
@@ -4,16 +4,16 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "start" : "nodemon remake/index.js"
+    "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "4.18.2",
     "nodemon": "^3.0.1"
-
-   
   },
   "devDependencies": {
-    
+    "prisma": "^5.9.1"
   }
 }
