--- a/algo-stuff/.env
+++ b/algo-stuff/.env
@@ -1,4 +1,3 @@
-DATABASE_URL="postgres://postgres.kwudpdaddffcrnruvkor:4pjCyfoytqbF9h2N@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
-"
+DATABASE_URL="postgres://postgres.kwudpdaddffcrnruvkor:4pjCyfoytqbF9h2N@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
 
 PORT=4000
