schedule fully works

--- a/algo-stuff/package.json
+++ b/algo-stuff/package.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev:algo": "nodemon src/app.js",
-    "dev": "nodemon src/index.js",
-    "start":"node src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
