--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgres://postgres.kwudpdaddffcrnruvkor:4pjCyfoytqbF9h2N@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgres://postgres.vowatsojiloibsdjegza:MwTRU2rff5zCfDSU@aws-0-eu-west-2.pooler.supabase.com:5432/postgres"
 
 PORT=4000
 
