--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "4.18.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "prisma": "^5.9.1"
