--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.285.0",
     "next": "^14.0.1",
     "react": "^18.2.0",
