--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,10 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "4.18.2",
-    "nodemon": "^3.0.1",
     "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "prisma": "^5.9.1"
