--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgres://postgres.vowatsojiloibsdjegza:uua19WE0vgfZoFRa@aws-0-eu-west-2.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgres://postgres.vowatsojiloibsdjegza:tYPvJiFzvrwLBIBc@aws-0-eu-west-2.pooler.supabase.com:5432/postgres"
 
 PORT=4000
 
