--- a/my-app/package.json
+++ b/my-app/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-time-picker": "^7.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
